# rust-esp32-https-example

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
src/certs/: private_key.pem  server_certificate.pem
