[package]
name = "rust-esp32-https-example"
version = "0.1.0"
authors = ["Jakob Lachermeier <lachermeier.jakob@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.0", features = ["binstart"] }
embedded-svc = { version = "0.22", features = ["experimental"] }
esp-idf-svc = { version = "0.42", features = ["experimental"] }
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
#esp-idf-sys = {path="../crates/esp-idf-sys"}
esp-idf-svc = { path = "../crates/esp-idf-svc" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"
